# sk-dev-platform

./: .gitignore  .gitmodules  LICENSE  README  build.sh  setup.sh  src-dist.sh
dist-configs/: grub.conf.sample  setup.sh
docs/: RELEASES  (+1 more)
libs/SCD/: Makefile  README  SCD compile.rtf  Setup.hs  scd.cabal
libs/SCD/checkpolicy/: .gitignore  Makefile
libs/SCD/libsepol-2.0.41/: .gitignore
libs/SCD/libsepol-2.0.41/debian/: changelog  control  local-vars.mk  local.mk  rules  watch
libs/SCD/libsepol-2.0.41/src/: Makefile
libs/SCD/libsepol-2.0.41/tests/: Makefile
libs/SCD/libsepol-2.0.41/utils/: Makefile
libs/SCD/src/: .no-hpc-trans
libs/SCD/src/Data/: HeadTail.hs  MapSet.hs  Memo.hs  NonEmptyList.hs  Strict.hs
libs/SCD/src/Data/List/: GroupSort.hs
libs/SCD/src/SCD/Analysis/: Generics.hs  XML.hs  scd-xml.cabal
libs/SCD/src/SCD/GenShrimp/: CoreLob.cf  FromCoreLob.hs  FromSimpleLob.hs  Makefile  QC.hs  README  SL2CS.hs  SimpleLob.cf  SimpleLobQC.hs  TODO  ex.txt  lobster.sh  prelude.m4  sl2cs.sh
libs/SCD/src/SCD/GenShrimp/test/: Makefile  Test.hs  err01.lsr  err01.lsr.gld  err02.lsr  err02.lsr.gld  err03.lsr  err03.lsr.gld  err04.lsr  err04.lsr.gld  err05.lsr  err05.lsr.gld  err06.lsr  err06.lsr.gld  err07.lsr  err07.lsr.gld  err08.lsr  err08.lsr.gld  err09.lsr  err09.lsr.gld  err10.lsr  err11.lsr  err11.lsr.gld  ex01.lsr  ex01.lsr.gld  ex02.lsr  ex02.lsr.gld  ex03.lsr  ex03.lsr.gld  ex04.lsr  ex04.lsr.gld  ex05.lsr  ex06.lsr  ex06.lsr.gld  ex07.lsr  ex07.lsr.gld  ex08.lsr  ex08.lsr.gld  ex09.lsr  ex09.lsr.gld  (+24 more)
libs/SCD/src/SCD/GenShrimp/test-qc/: Makefile  README
libs/SCD/src/SCD/Lobster/: Dot.cf  Env.hs  GenPrelude.hs  Makefile  Mangle.hs  Null.hs  Symbolic.hs  Util.hs  Utilities.hs
libs/SCD/src/SCD/Lobster/Old/: Lexer.x  Parser.y
libs/SCD/src/SCD/Lobster/Symbolic/: AstUtil.hs  Combine.hs  Connection.hs  Domain.hs  Lobster.hs  LobsterAST.hs  LobsterUseCase.hs  LobsterUtil.hs  Munge.hs  Todo  Tree.hs
libs/SCD/src/SCD/M4/: CheckTypeStmt.hs  Dependencies.hs  Errors.hs  ErrorsXml.hs  HTML.hs  Kind.hs  KindCheck.hs  KindCheckPolicy.hs  KindInfo.hs  Lexer.x  ModuleFiles.hs  Options.hs  PShow.hs  Parser.y  PrettyPrint.hs  QuickLobster.hs  QuickMain.hs  Syntax.hs  Util.hs  XML.hs
libs/SCD/src/SCD/M4/CallGraph/: CallGraph.hs  LICENSE  callgraph.cabal
libs/SCD/src/SCD/SELinux/: Authorize.hs  Lexer.x  Monad.hs  Parser.y  PrettyPrint.hs  Symbol.hs  Syntax.hs
libs/SCD/src/SCD/Shrimp/: Shrimp.hs
libs/SCD/src/SCD/Shrimp/RefPolicy/Modules/Services/: Dbus.hs
libs/SCD/src/SCD/Shrimp/SLIDE/: shrimp_warnings.dtd  suggested.dtd  suggested.xml
libs/SCD/src/System/Posix/: Interaction.hs  POpen.hs  Test.hs
libs/SCD/src/Text/Happy/: ParserMonad.hs
libs/SCD/src/Text/ParserCombinators/: PolyReadP.hs
libs/SCD/src/Text/PrettyPrint/: Pp.hs
libs/SCD/testsrc/SCD/M4/Test/: Dependencies.hs  ErrorSuite.hs  HTML.hs  KindCheck.hs  Parser.hs  QuickLobster.hs
libs/SCD/testsrc/SCD/M4/Test/ErrorSuite/: ErrorSuite.golden.xml
libs/SCD/testsrc/SCD/M4/Test/ErrorSuite/policy/flask/: access_vectors  security_classes
libs/SCD/testsrc/SCD/M4/Test/ErrorSuite/policy/modules/test/: errors.if  errors.te  errorsthree.if  errorsthree.te  errorstwo.if  errorstwo.te
libs/SCD/testsrc/SCD/M4/Test/ErrorSuite/policy/support/: file_patterns.spt  misc_patterns.spt  obj_perm_sets.spt
libs/SCD/testsrc/SCD/M4/Test/MiniPolicy/policy/support/: file_patterns.spt
libs/SCD/testsrc/SCD/SELinux/Test/: Authorize.hs  Parser.hs  Symbol.hs
libs/SCD/testsrc/SCD/SELinux/Test/data/: ambiguous0.conf  ambiguous1.conf  ambiguous10.conf  ambiguous11.conf  ambiguous12.conf  ambiguous13.conf  ambiguous14.conf  ambiguous15.conf  ambiguous16.conf  ambiguous17.conf  ambiguous2.conf  ambiguous3.conf  ambiguous4.conf  ambiguous5.conf  ambiguous6.conf  ambiguous7.conf  ambiguous8.conf  ambiguous9.conf  bad0.conf  bad1.conf  bad2.conf  example.conf  test0.conf  test1.conf  test10.conf  test11.conf  test12.conf  test13.conf  test14.conf  test15.conf  test16.conf  test2.conf  test3.conf  test4.conf  test5.conf  test6.conf  test7.conf  test8.conf  test9.conf
libs/SCD/testsrc/SCD/Test/: All.hs
libs/SCD/testsrc/Test/QuickCheck/: Fail.hs  Generate.hs
libs/genLobster/: Main.hs  Makefile  genLobster.cabal
libs/genLobster/Test/testPolicy/: README  files.fc  files.te  viewable_output.lsr
libs/genLobster/Test/testPolicy/policy/: booleans.conf
libs/lobster-selinux/: Makefile  lobster-selinux.cabal
libs/lobster-selinux/src/Lobster/SELinux/: Main.hs  SELinux.hs
libs/lobster-selinux/src/Lobster/SELinux/Test/: Main.hs  SELinux.hs
libs/lobster-selinux/test/examples/: error1.lsr  example1.fc.gld  example1.te.gld  example2.te.gld  example3.te.gld  example4.fc.gld  example4.te.gld
libs/lobster-validate/: Main.hs  Makefile  lobster-validate.cabal
libs/lobster-xsm/: Main.hs  Makefile  XSM-Prelude.lsr  lobster-xsm.cabal
libs/lobster-xsm/test/examples/: xen-example.lsr  xen-example.te  xen-example.vsd
libs/lviz/: ExtTools.hs  GUI.hs  LViz.hs  LVizMain.hs  Makefile  lviz.cabal  lviz.glade  testing.txt
libs/lviz/help/: genlobster.html  help.vsd  lobstercompiler.html  lobsterdsl.html  lviz.html  overview.html  refpolicy.html  shrimp.html  slide.html  symbion.html
libs/shrimp/: Shrimp.hs  shrimp.cabal
libs/symbolic-io/: Makefile  symbolic-io.cabal
libs/symbolic-io/src/Data/Symbolic/: Env.hs  IO.hs  LobsterTrees.hs  Makefile  Mode.hs  MonadRun.hs  Mungeable.hs  SIO.hs  Sample.hs  Trace.hs
libs/symbolic-io/src/Data/Symbolic/UseCases/: A.hs  B.hs  Makefile  Notes  Prelude.lsr  Support.hs  UseCase1.hs  UseCase1.in  UseCase1.lsr  UseCase2.hs  UseCase2.in  UseCase2.lsr  UseCases.ppt
user/sklite/: .gitignore  LICENSE  Makefile  README  cabal.sandbox.config  sklite.cabal  test.xml
user/sklite/src/: BootMain.hs  DriversMain.hs  SEPolicyMain.hs
user/sklite/src/Sklite/: Boot.hs  Config.hs  Drivers.hs  Paths.hs  SEPolicy.hs  ToolMain.hs  Types.hs  Util.hs
user/sklite/src/Sklite/Layout/: Validation.hs
user/sklite/tests/: ChannelExplosionTests.hs  ConfigParsingTests.hs  LayoutValidationTests.hs  Main.hs
(+139 files in other folders)
