Name: lobster-xsm
Version: 0.1
Description: The Lobster Xen back-end
License: AllRightsReserved
License-file: LICENSE
Cabal-version: >= 1.2
Build-type: Simple
Author: Joe Hurd, Brett Letner, Magnus Carlsson
Maintainer: joe@galois.com, bletner@contractor.galois.com, magnus@galois.com

Executable lobster-xsm
  Main-is: Main.hs
  Build-Depends:
           base >= 4,
           containers >= 0.1.0.0,
           pretty >= 1,
           lobster >= 0.1,
           scd >= 0.1,
           lobster-selinux >= 0.1


